# team2

./: README.md
devel/: .catkin
devel/include/sagittarius_joy/: arm_joy.h
devel/include/sagittarius_object_color_detector/: HSVParamsConfig.h  SGRCtrlAction.h  SGRCtrlActionFeedback.h  SGRCtrlActionGoal.h  SGRCtrlActionResult.h  SGRCtrlFeedback.h  SGRCtrlGoal.h  SGRCtrlResult.h
devel/include/sagittarius_openclaw_bridge/: RunCommand.h  RunCommandRequest.h  RunCommandResponse.h
devel/include/sdk_sagittarius_arm/: ArmInfo.h  ArmInfoRequest.h  ArmInfoResponse.h  ArmRadControl.h  SDKSagittariusArmConfig.h  ServoRtInfo.h  ServoRtInfoRequest.h  ServoRtInfoResponse.h  SingleRadControl.h
devel/lib/pkgconfig/: sagittarius_courses.pc  sagittarius_descriptions.pc  sagittarius_drawstar_and_display.pc  sagittarius_gazebo.pc  sagittarius_joy.pc  sagittarius_moveit.pc  sagittarius_object_color_detector.pc  sagittarius_openclaw_bridge.pc  sagittarius_puppet_control.pc  sdk_sagittarius_arm.pc
report/: 2026-04-10-camera-debug-summary.md  2026-04-12-midterm-presentation-outline.md  2026-04-14-midterm-progress-slides.fdb_latexmk  2026-04-14-midterm-progress-slides.fls  2026-04-14-midterm-progress-slides.tex  2026-04-16-vision-stabilization-update.md
src/sagittarius_arm_ros/: install.sh
src/sagittarius_openclaw_bridge-main/: CMakeLists.txt  README.md
src/sagittarius_openclaw_bridge-main/launch/: openclaw_backend.launch
src/sagittarius_openclaw_bridge-main/scripts/: command_bridge.py
src/sagittarius_openclaw_bridge-main/srv/: RunCommand.srv
(+144 files in other folders)
